--- a/docs/invoice template.tex
+++ b/docs/invoice template.tex
@@ -2,7 +2,59 @@
 \usepackage[utf8]{inputenc}
 \usepackage[left=1in,top=1in,right=1in,bottom=1in]{geometry}
 \usepackage{luacode}
+\usepackage{tabularx} 
+\usepackage{booktabs}
+\usepackage{graphicx}
+\usepackage{multirow}
+\usepackage{hhline}
+\usepackage{fontspec} 
+\usepackage{luatexja}
 \begin{document}
+\thispagestyle{empty}
+
 \begin{luacode}
+invoiceNumber = ""
+customer = ""
+address = ""
+items = {{"product", 0,0,0}}
+\end{luacode}
+
+\begin{tabularx}{\textwidth}{l X l}
+   \hspace{-8pt} \multirow{5}{*}{\includegraphics[height=1.98cm]{Gensome-Ginseng-Logo.png}} & \textbf{Gensome Ginseng, LLC} & \hskip12pt\multirow{5}{*}{\begin{tabular}{r}\footnotesize\bf INVOICE \\[-0.8ex] \footnotesize\luadirect{tex.print(invoiceNumber)}\\[-0.4ex] \footnotesize\bf DATE \\[-0.8ex] \footnotesize \MakeUppercase{\today} \\[-0.4ex] \footnotesize\bf DUE \\[-0.8ex] \footnotesize UPON RECEIPT OF PRODUCT \end{tabular}}\hspace{-6pt} \\
+   &Web Site: gensomeginseng.com & \\
+   & Wechat: gensomeginseng & \\
+   & Instagram: @gensomeginseng & \\
+   & Email: info@gensomeginseng.com & \\
+\end{tabularx} 
+
+\vspace{1 cm}
+
+BILL TO
+
+% Recipient name
+\Large\textbf{\luadirect{tex.print(customer)}}\normalsize\\
+\luadirect{tex.print(address)}
+
+\renewcommand{\arraystretch}{2.0}
+\begin{luacode}
+tex.print("\\begin{tabularx}{\\textwidth}{XXXXX}".."\\hline ".."Poduct&Unit Price&Quantity&Discount&Payment Due\\\\ \\hline")
+local total = 0
+for i, entry in ipairs(items) do
+local discount = 0;
+for j, value in ipairs(entry) do
+local output = value
+if j == 4 then
+output = -entry[3]*value
+discount = output
+end
+tex.print(output.." & ")
+end
+local due = entry[2]*entry[3]+discount
+total = total + due
+tex.print(due)
+tex.print("\\\\ \\hline")
+end
+tex.print("&&&Balance due&\\$"..total.."\\\\".."\\hhline{~~~==}")
+tex.print("\\end{tabularx}")
 \end{luacode}
 \end{document}
